update about, contact, product, add footer, back-to-top button

--- a/about.html
+++ b/about.html
@@ -8,28 +8,26 @@
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
-    <!-- Navbar -->
-    <!-- About section start-->
-    <div class="about">
-        <div class="about__content">
-            <span class="about__title">
+    <!-- About section starts-->
+    <section class="about">
+        <div class="about__left">
+            <h1 class="about__title isPlay_t">
                 About "Hololive production"
-            </span>
-            <span class="about__description">
+            </h1>
+            <div class="about__description isPlay_l">
                 Hololive Production (ホロライブプロダクション) is a Virtual Talent agency consisting of Virtual YouTubers owned by Japanese tech entertainment company COVER Corp
-            </span>
+            </div>
             <div>
                 <form action="#" >
-                    <input class="about__button" type="submit" value="Read more" />
+                    <input class="about__button isPlay_l" type="submit" value="Read more" />
                 </form>
-                <!-- <button type="button" class="about__button">Read more</button> -->
             </div>
         </div>
-        <div class="about__right">
-            <img class="about__image1" src="media/hololive.png" alt="">
-            <img class="about__image2" src="media/cover.png" alt="">
+        <div class="about__right isPlay_r">
+            <img class="about__image" src="media/hololive.png" alt="">
+            <img class="about__image" src="media/cover.png" alt="">
         </div>
-    </div>
-    <!-- About section end-->
+    </section>
+    <!-- About section ends-->
 </body>
 </html>
