--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,10 @@
     <!-- Navbar -->
     <!-- Contact section start -->
     <div class="contact">
-        <div class="contact__title">
+        <div class="contact__title isPlay_t">
             <h2>CONTACT US</h2>
         </div>
-        <div class="contact__content">
+        <div class="contact__content isPlay_l">
                 <div class="contact__content--box">
                     <div class="contact__box--content">
                         <div class="contact__box--title"> 
@@ -26,11 +26,14 @@
                             <li>Social media</li>
                         </div>
                     </div>
-                    <div class="contact__box--avatar">
-                        <!-- <img src="media/avatar.png" alt=""> -->
+                    <div class="contact__avatar--container">
+                        <img class="contact__box--avatar" src="media/avatar.png" alt="">
                     </div>
                 </div>
-                <div class="contact__content--box2">
+                <div class="contact__content--box">
+                    <div class="contact__avatar--container">
+                        <img class="contact__box--avatar2" src="media/avatar.png" alt="">
+                    </div>
                     <div class="contact__box--content2">
                         <div class="contact__box--title2"> 
                             FULL NAME
@@ -41,13 +44,10 @@
                             <li>Social media</li>
                         </div>
                     </div>
-                    <div class="contact__box--avatar2">
-                        <!-- <img src="media/avatar.png" alt=""> -->
-                    </div>
                 </div>
             </div>
         </div>
-        <div class="contact__footer">
+        <div class="contact__footer isPlay_b">
             <img class="contact__footer--img" src="media/logo1.png" alt="">
         </div>
     </div>
