--- a/footer.html
+++ b/footer.html
@@ -11,9 +11,15 @@
 <body>
     <div class="foot__container isPlay_b">
         <div class="foot__chanel">
-            <i class="fa-brands fa-youtube foot__icon"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-twitter"></i>
+            <a href="#">
+                <i class="fa-brands fa-youtube foot__icon"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
         </div>
         <div class="foot__list1">
             <form action="#" class="" id="">
