update product page

--- a/product.html
+++ b/product.html
@@ -16,7 +16,7 @@
         <div class="product__header isPlay_t">
             <h2 class="product__title">VIDEOS</h2>
         </div>
-        <section class="product__options isPlay_t">
+        <div class="product__options isPlay_t">
             <form action="#" class="product__option">
                 <input class="product__button--value" type="submit" value="All"/>
             </form>
@@ -29,8 +29,8 @@
             <form action="#" class="product__option">
                 <input class="product__button--value" type="submit" value="Games"/>
             </form>
-        </section>
-        <section class="product__list-videos swiper isPlay_l">
+        </div>
+        <div class="product__list-videos swiper isPlay_l">
             <div class="swiper-wrapper">
                 <!-- Video 1 -->
                     <div class="swiper-slide product__container--video">
@@ -105,8 +105,7 @@
                         <span>120 min | Thriller</span>
                     </div>
             </div>
-            <div class="swiper-pagination"></div>
-        </section>
+        </d>
     </div>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
