--- a/Code/Contact/contact.html
+++ b/Code/Contact/contact.html
@@ -27,12 +27,12 @@
                         </div>
                     </div>
                     <div class="contact__avatar--container">
-                        <img class="contact__box--avatar" src="/Img/avatar.png" alt="">
+                        <img class="contact__box--avatar" src="/Img/avatar1.jpg" alt="">
                     </div>
                 </div>
                 <div class="contact__content--box">
                     <div class="contact__avatar--container">
-                        <img class="contact__box--avatar2" src="/Img/avatar.png" alt="">
+                        <img class="contact__box--avatar2" src="/Img/avatar2.jpg" alt="">
                     </div>
                     <div class="contact__box--content2">
                         <div class="contact__box--title2"> 
@@ -47,12 +47,6 @@
                 </div>
             </div>
         </div>
-<<<<<<< HEAD
-=======
-        <div class="contact__footer isPlay_b">
-            <img class="contact__footer--img" src="/Img/logo1.png" alt="">
-        </div>
->>>>>>> 0835141e9b0557a1b3920a7c9ed2e69f29811598
     </div>
     <!-- Contact section end -->
 </body>
