link to section in main page

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <div class="btn">
                 <i class="fa-solid fa-xmark"></i>
             </div>
-                <a href="#" class="text-aqua">Home</a>
-                <a href="#" class="text-aqua">About</a>
-                <a href="#" class="text-aqua">CEO</a>
-                <a href="#" class="text-aqua">Talents</a>
-                <a href="#" class="text-aqua">Product</a>
-                <a href="#" class="text-white1">Media</a>
-                <a href="#" class="text-white2">Contact</a>
+                <a href="#home" class="text-aqua">Home</a>
+                <a href="#about" class="text-aqua">About</a>
+                <a href="#ceo" class="text-aqua">CEO</a>
+                <a href="#talents" class="text-aqua">Talents</a>
+                <a href="#product" class="text-aqua">Product</a>
+                <a href="#media" class="text-white1">Media</a>
+                <a href="#contact" class="text-white2">Contact</a>
         </div>
         <div class="btn">
             <i class="fa-solid fa-bars"></i>
@@ -56,25 +56,25 @@
         });
     </script>
     
-    <div class="iframe-div">
+    <div class="iframe-div" id="home">
         <iframe src="/Code/Home/home.html" frameborder="0"></iframe>
     </div>
-    <div class="iframe-div">
+    <div class="iframe-div" id="about">
         <iframe src="/Code/About/about.html" frameborder="0"></iframe>
     </div>
-    <div class="iframe-div">
+    <div class="iframe-div" id="ceo">
         <iframe src="/Code/CEO/ceo.html" frameborder="0"></iframe>
     </div>
-    <div class="iframe-div">
+    <div class="iframe-div" id="talents">
         <iframe src="/Code/Talents/talent.html" frameborder="0"></iframe>
     </div>
-    <div class="iframe-div">
+    <div class="iframe-div" id="product">
         <iframe src="/Code/Product/product.html" frameborder="0"></iframe>
     </div>
-    <div class="iframe-div">
+    <div class="iframe-div" id="media">
         <iframe src="/Code/Media/media.html" frameborder="0"></iframe>
     </div>
-    <div class="iframe-div">
+    <div class="iframe-div" id="contact">
         <iframe src="/Code/Contact/contact.html" frameborder="0"></iframe>
     </div>
     
