--- a/Code/MainPage/main.html
+++ b/Code/MainPage/main.html
@@ -17,13 +17,13 @@
             <div class="btn">
                 <i class="fa-solid fa-xmark"></i>
             </div>
-                <a href="#" class="text-aqua">Home</a>
-                <a href="#" class="text-aqua">About</a>
-                <a href="#" class="text-aqua">CEO</a>
-                <a href="#" class="text-aqua">Talents</a>
-                <a href="#" class="text-aqua">Product</a>
-                <a href="#" class="text-white1">Media</a>
-                <a href="#" class="text-white2">Contact</a>
+                <a href="#home" class="text-aqua">Home</a>
+                <a href="#about" class="text-aqua">About</a>
+                <a href="#ceo" class="text-aqua">CEO</a>
+                <a href="#talents" class="text-aqua">Talents</a>
+                <a href="#product" class="text-aqua">Product</a>
+                <a href="#media" class="text-white1">Media</a>
+                <a href="#contact" class="text-white2">Contact</a>
         </div>
         <div class="btn">
             <i class="fa-solid fa-bars"></i>
@@ -40,7 +40,6 @@
 
             var a = document.querySelector('.text-white2')
             a.classList.toggle('text-aqua',window.scrollY > 0);
-
         });
 
         var menu = document.querySelector('.menu');
@@ -57,36 +56,36 @@
     </script>
     
     <div class="iframe-div">
-        <iframe src="/Code/Home/home.html" frameborder="0"></iframe>
+        <iframe src="/Code/Home/home.html" frameborder="0" id="home"></iframe>
     </div>
     <div class="iframe-div">
-        <iframe src="/Code/About/about.html" frameborder="0"></iframe>
+        <iframe src="/Code/About/about.html" frameborder="0" id="about"></iframe>
     </div>
     <div class="iframe-div">
-        <iframe src="/Code/CEO/ceo.html" frameborder="0"></iframe>
+        <iframe src="/Code/CEO/ceo.html" frameborder="0" id="ceo"></iframe>
     </div>
     <div class="iframe-div">
-        <iframe src="/Code/Talents/talent.html" frameborder="0"></iframe>
+        <iframe src="/Code/Talents/talent.html" frameborder="0" id="talents"></iframe>
     </div>
     <div class="iframe-div">
-        <iframe src="/Code/Product/product.html" frameborder="0"></iframe>
+        <iframe src="/Code/Product/product.html" frameborder="0" id="product"></iframe>
     </div>
     <div class="iframe-div">
-        <iframe src="/Code/Media/media.html" frameborder="0"></iframe>
+        <iframe src="/Code/Media/media.html" frameborder="0" id="media"></iframe>
     </div>
     <div class="iframe-div">
-        <iframe src="/Code/Contact/contact.html" frameborder="0"></iframe>
+        <iframe src="/Code/Contact/contact.html" frameborder="0" id="contact"></iframe>
     </div>
     
     <div class="foot__container isPlay_b">
         <div class="foot__chanel">
-            <a href="#">
+            <a href="https://www.facebook.com/hololivetv">
                 <i class="fa-brands fa-youtube foot__icon"></i>
             </a>
-            <a href="#">
+            <a href="https://www.youtube.com/channel/UCJFZiqLMntJufDCHc6bQixg">
                 <i class="fa-brands fa-facebook"></i>
             </a>
-            <a href="#">
+            <a href="https://twitter.com/hololivetv">
                 <i class="fa-brands fa-twitter"></i>
             </a>
         </div>
@@ -95,7 +94,7 @@
                 <input type="submit" class="" id="" value="Audition">
             </form>
             <form action="#" class="" id="">
-                <input type="submit" class="" id="" value="Audition">
+                <input type="submit" class="" id="" value="Derivative Work">
             </form>
         </div>
         <div class="foot__list2">
