--- a/Code/Talents/talent.html
+++ b/Code/Talents/talent.html
@@ -8,9 +8,9 @@
     <title>Talent</title>
 </head>
 <body>
-    <h2>Hololive Talents</h2>
-    <p>Some interesting numbers about Hololive (Update from July 1, 2022)</p>
-    <div class="shape">
+    <h2 class="isPlay_l">Hololive Talents</h2>
+    <p class="isPlay_l">Some interesting numbers about Hololive (Update from July 1, 2022)</p>
+    <div class="shape isPlay_t">
         <div class="triangle"></div>
     </div>
     <div class="counter-container">
@@ -30,6 +30,6 @@
         <span class="tx subs">Million subs</span>
     </div>
     <script src="talent.js"></script>
-    <img src="/Img/Home.png" alt="Talents">
+    <img src="/Img/Home.png" alt="Talents" class="isPlay_t">
 </body>
 </html>
