--- a/Code/CEO/ceo.html
+++ b/Code/CEO/ceo.html
@@ -8,14 +8,14 @@
     <title>CEO</title>
 </head>
 <body>
-    <img src="/Img/Yagoo.jpg" alt="Yagoo">
-    <h2>"I am Motoaki Tanigo, CEO of COVER CORPORATION"</h2>
-    <ul>
+    <img src="/Img/Yagoo.jpg" alt="Yagoo" class="isPlay_l">
+    <h2 class="isPlay_r">"I am Motoaki Tanigo, CEO of COVER CORPORATION"</h2>
+    <ul class="isPlay_r">
         <li>Motoaki Tanigo also known as Yagoo</li>
         <li>Graduated from the Faculty of Science and Technology of Keio University</li>
         <li>He went on to found Cover Corporation in June 2016 which was first aimed at developing new content that utilizes AR/VR technology</li>
     </ul>
-    <button>
+    <button class="isPlay_r">
         <a href="https://twitter.com/tanigox" target="_blank">Twitter</a>
     </button>
 </body>
