--- a/Code/Home/home.html
+++ b/Code/Home/home.html
@@ -8,14 +8,16 @@
     <title>Home</title>
 </head>
 <body>
-    <div class="bg">
+    <div class="bg isPlay_r">
         <img src="/Img/BG 4.png" alt="Background">
     </div>
-    <div class="tkn">
+    <div class="tkn isPlay_t" >
         <img src="/Img/Tokino Sora.png" alt="Tokino Sora">
     </div>
-    <h2>HOLOLIVE PRODUCTION</h2><br>
-    <p>A introduction project about Hololive made by F-Code members</p>
-    <button>LET'S START!</button>
+    <div class="isPlay_l">
+        <h2>HOLOLIVE PRODUCTION</h2><br>
+        <p>A introduction project about Hololive made by F-Code members</p>
+        <button>LET'S START!</button>
+    </div>
 </body>
 </html>
