--- a/Code/Product/product.html
+++ b/Code/Product/product.html
@@ -23,72 +23,72 @@
                         <div class="product__video--img">
                             <img src="/Img/product-video-1.jpg" alt="">
                         </div>
-                        <a href="#">Mahoutsukai no Yome</a>
-                        <span>120 min | Thriller</span>
+                        <a href="#">Typhoons Ruin Trip</a>
+                        <span>1:25 | Anime</span>
                     </div>
                 <!-- Video 2 -->
                     <div class="swiper-slide product__container--video">
                         <div class="product__video--img">
                             <img src="/Img/product-video-2.jpg" alt="">
                         </div>
-                        <a href="#">Kaichou wa Maid-Sama</a>
-                        <span>120 min | Thriller</span>
+                        <a href="#">When The Cicadas Fly</a>
+                        <span>2:07 | Anime</span>
                     </div>
                 <!-- Video 3 -->
                     <div class="swiper-slide product__container--video">
                         <div class="product__video--img">
                             <img src="/Img/product-video-3.jpg" alt="">
                         </div>
-                        <a href="#">Kamisama Hajimemashita</a>
-                        <span>120 min | Thriller</span>
+                        <a href="#">On The Tail</a>
+                        <span>3:11 | Anime Horror</span>
                     </div>
                 <!-- Video 4 -->
                     <div class="swiper-slide product__container--video">
                         <div class="product__video--img">
                             <img src="/Img/product-video-4.jpg" alt="">
                         </div>
-                        <a href="#">Shokugeki No Souma</a>
-                        <span>120 min | Thriller</span>
+                        <a href="#">Leading by Example</a>
+                        <span>2:09 | HoloX Anime</span>
                     </div>
                 <!-- Video 5 -->
                     <div class="swiper-slide product__container--video">
                         <div class="product__video--img">
                             <img src="/Img/product-video-5.jpg" alt="">
                         </div>
-                        <a href="#">Tenki no ko</a>
-                        <span>120 min | Thriller</span>
+                        <a href="#">Going For Broke</a>
+                        <span>2:57 | HoloX Anime</span>
                     </div>
                 <!-- Video 6 -->
                     <div class="swiper-slide product__container--video">
                         <div class="product__video--img">
                             <img src="/Img/product-video-6.jpg" alt="">
                         </div>
-                        <a href="#">Kimi no Na wa</a>
-                        <span>120 min | Thriller</span>
+                        <a href="#">This Is Dope!</a>
+                        <span>2:17 | HoloX Anime</span>
                     </div>
                 <!-- Video 7 -->
                     <div class="swiper-slide product__container--video">
                         <div class="product__video--img">
                             <img src="/Img/product-video-7.jpg" alt="">
                         </div>
-                        <a href="#">Ōkami Kodomo no Ame to Yuki</a>
-                        <span>120 min | Thriller</span>
+                        <a href="#">The Intern-alization</a>
+                        <span>2:21 | HoloX Anime</span>
                     </div>
                 <!-- Video 8 -->
                     <div class="swiper-slide product__container--video">
                         <div class="product__video--img">
                             <img src="/Img/product-video-8.jpg" alt="">
                         </div>
-                        <a href="#">Kaguya-Sama Wa Kokurasetai</a>
-                        <span>120 min | Thriller</span>
+                        <a href="#">Choose Your Battles Wisely</a>
+                        <span>1:59 | HoloX Anime</span>
                     </div>
                 <!-- Video 9 -->
                     <div class="swiper-slide product__container--video">
                         <div class="product__video--img">
                             <img src="/Img/product-video-9.jpg" alt="">
                         </div>
-                        <a href="#">Hotarubi no Mori e</a>
-                        <span>120 min | Thriller</span>
+                        <a href="#">Tag-Team Finish</a>
+                        <span>1:15 | Anime</span>
                     </div>
             </div>
         </d>
