--- a/Code/About/about.html
+++ b/Code/About/about.html
@@ -24,8 +24,8 @@
             </div>
         </div>
         <div class="about__right isPlay_r">
-            <img class="about__image" src="/Img/hololive.png" alt="">
-            <img class="about__image" src="/Img/cover.png" alt="">
+            <img class="about__image" src="../../Img/hololive.png" alt="">
+            <img class="about__image" src="../../Img/cover.png" alt="">
         </div>
     </section>
     <!-- About section ends-->
