--- a/Code/CEO/ceo.html
+++ b/Code/CEO/ceo.html
@@ -8,7 +8,7 @@
     <title>CEO</title>
 </head>
 <body>
-    <img src="/Img/Yagoo.jpg" alt="Yagoo" class="isPlay_l">
+    <img src="../../Img/Yagoo.jpg" alt="Yagoo" class="isPlay_l">
     <h2 class="isPlay_r">"I am Motoaki Tanigo, CEO of COVER CORPORATION"</h2>
     <ul class="isPlay_r">
         <li>Motoaki Tanigo also known as Yagoo</li>
