--- a/Code/Contact/contact.html
+++ b/Code/Contact/contact.html
@@ -27,12 +27,12 @@
                         </div>
                     </div>
                     <div class="contact__avatar--container">
-                        <img class="contact__box--avatar" src="/Img/avatar1.jpg" alt="">
+                        <img class="contact__box--avatar" src="../../Img/avatar1.jpg" alt="">
                     </div>
                 </div>
                 <div class="contact__content--box">
                     <div class="contact__avatar--container">
-                        <img class="contact__box--avatar2" src="/Img/avatar2.jpg" alt="">
+                        <img class="contact__box--avatar2" src="../../Img/avatar2.jpg" alt="">
                     </div>
                     <div class="contact__box--content2">
                         <div class="contact__box--title2"> 
