--- a/Code/Home/home.html
+++ b/Code/Home/home.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="bg isPlay_r">
-        <img src="/Img/BG 4.png" alt="Background">
+        <img src="../../Img/BG 4.png" alt="Background">
     </div>
     <div class="tkn isPlay_t" >
-        <img src="/Img/Tokino Sora.png" alt="Tokino Sora">
+        <img src="../../Img/Tokino Sora.png" alt="Tokino Sora">
     </div>
     <div class="isPlay_l">
         <h2>HOLOLIVE PRODUCTION</h2><br>
