--- a/Code/Media/media.html
+++ b/Code/Media/media.html
@@ -12,22 +12,22 @@
     <div class="container">
         <div class="ytb">
             <a href="https://www.youtube.com/channel/UCJFZiqLMntJufDCHc6bQixg" target="_blank">
-                <img src="/Img/Youtube.PNG" alt="Youtube">
+                <img src="../../Img/Youtube.PNG" alt="Youtube">
             </a>
         </div>
         <div class="tw">
             <a href="https://twitter.com/hololivetv" target="_blank">
-                <img src="/Img/Twitter.PNG" alt="Twitter">
+                <img src="../../Img/Twitter.PNG" alt="Twitter">
             </a>
         </div>
         <div class="wb">
             <a href="https://hololive.hololivepro.com/" target="_blank">
-                <img src="/Img/Website.PNG" alt="Website">
+                <img src="../../Img/Website.PNG" alt="Website">
             </a>
         </div>
         <div class="shop">
             <a href="https://shop.hololivepro.com/" target="_blank">
-                <img src="/Img/Shop.PNG" alt="Shop">
+                <img src="../../Img/Shop.PNG" alt="Shop">
             </a>
         </div>
     </div>
