--- a/Code/Talents/talent.html
+++ b/Code/Talents/talent.html
@@ -30,6 +30,6 @@
         <span class="tx subs">Million subs</span>
     </div>
     <script src="talent.js"></script>
-    <img src="/Img/Home.png" alt="Talents" class="isPlay_t">
+    <img src="../../Img/Home.png" alt="Talents" class="isPlay_t">
 </body>
 </html>
