--- a/Code/Product/product.html
+++ b/Code/Product/product.html
@@ -21,7 +21,7 @@
                 <!-- Video 1 -->
                     <div class="swiper-slide product__container--video">
                         <div class="product__video--img">
-                            <img src="/Img/product-video-1.jpg" alt="">
+                            <img src="../../Img/product-video-1.jpg" alt="">
                         </div>
                         <a href="#">Typhoons Ruin Trip</a>
                         <span>1:25 | Anime</span>
@@ -29,7 +29,7 @@
                 <!-- Video 2 -->
                     <div class="swiper-slide product__container--video">
                         <div class="product__video--img">
-                            <img src="/Img/product-video-2.jpg" alt="">
+                            <img src="../../Img/product-video-2.jpg" alt="">
                         </div>
                         <a href="#">When The Cicadas Fly</a>
                         <span>2:07 | Anime</span>
@@ -37,7 +37,7 @@
                 <!-- Video 3 -->
                     <div class="swiper-slide product__container--video">
                         <div class="product__video--img">
-                            <img src="/Img/product-video-3.jpg" alt="">
+                            <img src="../../Img/product-video-3.jpg" alt="">
                         </div>
                         <a href="#">On The Tail</a>
                         <span>3:11 | Anime Horror</span>
@@ -45,7 +45,7 @@
                 <!-- Video 4 -->
                     <div class="swiper-slide product__container--video">
                         <div class="product__video--img">
-                            <img src="/Img/product-video-4.jpg" alt="">
+                            <img src="../../Img/product-video-4.jpg" alt="">
                         </div>
                         <a href="#">Leading by Example</a>
                         <span>2:09 | HoloX Anime</span>
@@ -53,7 +53,7 @@
                 <!-- Video 5 -->
                     <div class="swiper-slide product__container--video">
                         <div class="product__video--img">
-                            <img src="/Img/product-video-5.jpg" alt="">
+                            <img src="../../Img/product-video-5.jpg" alt="">
                         </div>
                         <a href="#">Going For Broke</a>
                         <span>2:57 | HoloX Anime</span>
@@ -61,7 +61,7 @@
                 <!-- Video 6 -->
                     <div class="swiper-slide product__container--video">
                         <div class="product__video--img">
-                            <img src="/Img/product-video-6.jpg" alt="">
+                            <img src="../../Img/product-video-6.jpg" alt="">
                         </div>
                         <a href="#">This Is Dope!</a>
                         <span>2:17 | HoloX Anime</span>
@@ -69,7 +69,7 @@
                 <!-- Video 7 -->
                     <div class="swiper-slide product__container--video">
                         <div class="product__video--img">
-                            <img src="/Img/product-video-7.jpg" alt="">
+                            <img src="../../Img/product-video-7.jpg" alt="">
                         </div>
                         <a href="#">The Intern-alization</a>
                         <span>2:21 | HoloX Anime</span>
@@ -77,7 +77,7 @@
                 <!-- Video 8 -->
                     <div class="swiper-slide product__container--video">
                         <div class="product__video--img">
-                            <img src="/Img/product-video-8.jpg" alt="">
+                            <img src="../../Img/product-video-8.jpg" alt="">
                         </div>
                         <a href="#">Choose Your Battles Wisely</a>
                         <span>1:59 | HoloX Anime</span>
@@ -85,7 +85,7 @@
                 <!-- Video 9 -->
                     <div class="swiper-slide product__container--video">
                         <div class="product__video--img">
-                            <img src="/Img/product-video-9.jpg" alt="">
+                            <img src="../../Img/product-video-9.jpg" alt="">
                         </div>
                         <a href="#">Tag-Team Finish</a>
                         <span>1:15 | Anime</span>
